2008-08-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* t/GtkBuilder.t: Merge the UI definitions and, more importantly,
	make it work correctly with newer gtk+.

2008-08-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* xs/GtkTreeModel.xs (gtk2perl_tree_model_rows_reordered_marshal)
	* t/GtkTreeModelIface.t: Fix marshaling of the rows-reordered
	signal for custom Perl tree models.  Patch by Kevin Ryde.

	* xs/GtkAboutDialog.xs: Don't define macros inside a MODULE
	section.  Older xsubpp can't handle that.

	* xs/GtkDialog.xs: Add documentation about closing dialogs, and
	mention that class closures for the response signal receive
	unconverted response ids.  Patch by Kevin Ryde.

	* xs/GtkWindow.xs: Add a couple of words about the delete-event
	signal and its relation to window destruction and hidden windows.
	Patch by Kevin Ryde.

	* xs/GtkTreeModel.xs: Document that class closures in Perl
	subclasses for the rows-reordered signal receive an incorrect
	reorder array parameter, unlike normal signal handlers.  Patch by
	Kevin Ryde.

2008-07-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* xs/GtkWidget.xs: Document some aspects of Gtk2::Widget::activate
	and set_scroll_adjustments that are relevant to Perl subclasses.
	Patch by Kevin Ryde.

2008-06-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* t/GtkClipboard.t: Fix test failure that's presumably due to
	get_func being run more often than expected.  Also use
	Gtk2::TestHelper's run_main to replace equivalent Glib::Timeout
	constructs.

2008-06-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* t/GtkIconView.t: Fix test failures by not running certain
	unreliable tests.  Also avoid running unnecessary main loops.

2008-06-02  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* NEWS
	* README: Stable release 1.183.

2008-06-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:
